<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnRealizarRelatorio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelatorioFragment">

    <EditText
        android:id="@+id/etTituloRe"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="248dp"
        android:ems="10"
        android:hint="@string/etTituloRelatorio"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etIdFuncionarioRe"
        app:layout_constraintEnd_toStartOf="@+id/etResumoRe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etResumoRe"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/etResumoRelatorio"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etTextoRe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etTituloRe"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etTextoRe"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/etTextoRelatorio"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etImagenRe"
        app:layout_constraintStart_toStartOf="@+id/etTituloRe"
        app:layout_constraintTop_toBottomOf="@+id/etResumoRe" />

    <EditText
        android:id="@+id/etImagenRe"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="31dp"
        android:ems="10"
        android:hint="@string/etImagem"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etLinkRe"
        app:layout_constraintStart_toStartOf="@+id/etTextoRe"
        app:layout_constraintTop_toBottomOf="@+id/etTextoRe" />

    <EditText
        android:id="@+id/etLinkRe"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/etLinkRelatorio"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/rbAnonimatoRe"
        app:layout_constraintStart_toStartOf="@+id/etIdFuncionarioRe"
        app:layout_constraintTop_toBottomOf="@+id/etImagenRe" />

    <EditText
        android:id="@+id/etCpfRe"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/etCpfAcessoCliente"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnRealizarRe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioButton
        android:id="@+id/rbAnonimatoRe"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="14dp"
        android:text="@string/rbAnonimatoRelatorio"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etIdFuncionarioRe"
        app:layout_constraintTop_toBottomOf="@+id/etLinkRe" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:text="@string/casoPrivado"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etIdFuncionarioRe"
        app:layout_constraintStart_toEndOf="@+id/etIdFuncionarioRe"
        app:layout_constraintTop_toBottomOf="@+id/etIdFuncionarioRe" />

    <Button
        android:id="@+id/btnRealizarRe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/btnManterRelatorio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCpfRe" />

    <EditText
        android:id="@+id/etIdFuncionarioRe"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="28dp"
        android:ems="10"
        android:hint="@string/idFunRelatorio"
        android:inputType="text"
        android:textColorHint="@color/black"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/rbAnonimatoRe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTituloRe" />
</androidx.constraintlayout.widget.ConstraintLayout>