<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnMostrarRelatorio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClienteFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/textoClienteListarRelatorio"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscarCpf"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarCpf" />

    <EditText
        android:id="@+id/etCpfCliente"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="1dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/cpfCliente"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnBuscarCpf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvListarRelatorio"
        android:layout_width="0dp"
        android:layout_height="338dp"
        android:layout_marginTop="394dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarCpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="17dp"
        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etInserirIdCliente"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="9dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/idRelatorio"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnListarRelatorio"
        app:layout_constraintEnd_toStartOf="@+id/btnListarRelatorio"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnListarRelatorio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="31dp"
        android:text="@string/listarRelatorio"
        app:layout_constraintBottom_toTopOf="@+id/tvListarRelatorio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etInserirIdCliente" />
</androidx.constraintlayout.widget.ConstraintLayout>